--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-feature android:name = "android.hardware.location.gps"/>
     <application
 
         android:allowBackup="true"
@@ -32,6 +34,9 @@
         </activity>
         <activity android:name=".Email">
             android:name=".Email
+        </activity>
+        <activity android:name=".BluetoothConnect">
+            android:name=".BluetoothConnect
         </activity>
     </application>
 
