--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,44 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tri.airr.hero">
-    <!--Useful Link for Android Dev: https://developer.android.com/index.html -->
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-feature android:name = "android.hardware.location.gps"/>
-    <application
 
+    <!-- Useful Link for Android Dev: https://developer.android.com/index.html -->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="24" />
+
+    <uses-feature
+        android:name="android.hardware.bluetooth_le"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <uses-feature android:name="android.hardware.location.gps" />
+
+    <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:screenOrientation="portrait">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Daily" android:screenOrientation="portrait">
+        <activity
+            android:name=".Daily"
+            android:screenOrientation="portrait">
             android:name= ".Daily"
         </activity>
-        <activity android:name=".Exercise" android:screenOrientation="portrait">
+        <activity
+            android:name=".Exercise"
+            android:screenOrientation="portrait">
             android:name= ".Exercise"
         </activity>
-        <activity android:name=".Results" android:screenOrientation="portrait">
+        <activity
+            android:name=".Results"
+            android:screenOrientation="portrait">
             android:name= ".Results"
         </activity>
-        <activity android:name=".Stretch" android:screenOrientation="portrait">
+        <activity
+            android:name=".Stretch"
+            android:screenOrientation="portrait">
             android:name= ".Stretch"
         </activity>
-        <activity android:name=".Email" android:screenOrientation="portrait">
+        <activity
+            android:name=".Email"
+            android:screenOrientation="portrait">
             android:name=".Email
         </activity>
-        <activity android:name=".BluetoothConnect" android:screenOrientation="portrait">
+        <activity
+            android:name=".BluetoothConnect"
+            android:screenOrientation="portrait">
             android:name=".BluetoothConnect
         </activity>
+        <activity android:name=".RESTMethods" />
+        <activity android:name=".RESTTest"></activity>
     </application>
 
 </manifest>
