--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,12 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
-    
 
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true" />
 
     <application
         android:allowBackup="true"
@@ -77,13 +81,21 @@
             android:name=".BluetoothConnect
             android:screenOrientation="portrait"
         </activity>
-        <activity android:name=".RESTMethods"
+        <activity
+            android:name=".RESTMethods"
             android:screenOrientation="portrait" />
-        <activity android:name=".RESTTest"
+        <activity
+            android:name=".RESTTest"
             android:screenOrientation="portrait" />
-        <activity android:name=".VoiceControl"
-            android:screenOrientation="portrait">
-        </activity>
+        <activity
+            android:name=".VoiceControl"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Authentication"
+            android:label="@string/title_activity_authentication" />
+        <activity
+            android:name=".VoiceControlNoWords"
+            android:label="@string/title_activity_voice_control_no_words"></activity>
     </application>
 
 </manifest>
