--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,16 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     compile 'com.google.code.gson:gson:2.4'
     compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
+    compile 'com.android.support:design:25.0.0'
+    compile 'com.github.jakob-grabner:Circle-Progress-View:v1.3'
 }
 
 repositories {
     jcenter()
     maven { url "https://maven.google.com" }
+    //used for spinning view for progress bar
+    //TODO INCLUDE THE LICENSE FOR THE CODE SO DONT GET SUED
+    maven { url "https://jitpack.io" }
 }
 
 
