--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,26 +36,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            android:screenOrientation="portrait"
-        </activity>
         <activity
             android:name=".Daily"
             android:screenOrientation="portrait">
             android:name= ".Daily"
             android:screenOrientation="portrait"
-        </activity>
-        <activity
-            android:name=".Exercise"
-            android:screenOrientation="portrait">
-            android:name= ".Exercise"
         </activity>
         <activity
             android:name=".Results"
@@ -95,7 +81,14 @@
             android:label="@string/title_activity_authentication" />
         <activity
             android:name=".VoiceControlNoWords"
-            android:label="@string/title_activity_voice_control_no_words"></activity>
+            android:label="@string/title_activity_voice_control_no_words" />
+        <activity android:name=".Home">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
